[package]
name = "codegen_spec"
description = "Language specification generator"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
codegen_schema = { workspace = true }
codegen_utils = { workspace = true }
codegen_ebnf = { workspace = true }
Inflector = { workspace = true }
semver = { workspace = true }
