[package]
name = "codegen_spec"
description = "Language specification generator"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
codegen_ebnf = { workspace = true }
codegen_language_definition = { workspace = true }
Inflector = { workspace = true }
infra_utils = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
