[package]
name = "codegen_spec"
description = "Language specification generator"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
codegen_ebnf = { workspace = true }
Inflector = { workspace = true }
infra_utils = { workspace = true }
itertools = { workspace = true }
language_definition = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
