[package]
name = "codegen_syntax"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
codegen_ebnf = { workspace = true }
codegen_schema = { workspace = true }
codegen_utils = { workspace = true }
Inflector = { workspace = true }
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
tera = { workspace = true }
typed-arena = { workspace = true }
