[package]
name = "codegen_testing"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
codegen_language_definition = { workspace = true }
Inflector = { workspace = true }
infra_utils = { workspace = true }

[lints]
workspace = true

