[package]
name = "codegen_testing"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
Inflector = { workspace = true }
infra_utils = { workspace = true }
language_definition = { workspace = true }
semver = { workspace = true }

[lints]
workspace = true
