[package]
name = "infra_cli"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

description = "Commands to build, test, version, and publish projects in this repository."

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
infra_utils = { workspace = true }
itertools = { workspace = true }
markdown = { workspace = true }
public-api = { workspace = true }
rayon = { workspace = true }
rustdoc-json = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
