[package]
name = "infra_utils"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
ariadne = { workspace = true }
console = { workspace = true }
httpdate = { workspace = true }
ignore = { workspace = true }
Inflector = { workspace = true }
itertools = { workspace = true }
num-format = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar-asserts = { workspace = true }
tera = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
