[package]
name = "language_v2_internal_macros"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
