[package]
name = "language_definition"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
indexmap = { workspace = true }
Inflector = { workspace = true }
infra_utils = { workspace = true }
itertools = { workspace = true }
language_internal_macros = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
