[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
# __SLANG_CARGO_PUBLISH_TEMPORARILY_DISABLED__ (keep in sync)
# publish = true

name = "metaslang_bindings"
description = "Computes semantic language bindings from parsed source code"
homepage = "https://nomicfoundation.github.io/slang/"
repository = "https://github.com/NomicFoundation/slang/"
authors = [
  "Slang Team <slang@nomic.foundation>",
  "Nomic Foundation <packages@nomic.foundation>",
]

readme = "README.md"
license = "MIT"
keywords = ["parser"]
categories = ["compilers", "parsing", "parser-implementations"]

[dependencies]
metaslang_cst = { workspace = true }
metaslang_graph_builder = { workspace = true }
semver = { workspace = true }
stack-graphs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

[features]
default = []
__private_testing_utils = []
__metaslang_graph_builder = []

[lints]
workspace = true
