[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
# __SLANG_CARGO_PUBLISH_TEMPORARILY_DISABLED__ (keep in sync)
# publish = true

name = "metaslang_cst"
description = "A generic library for building, navigating and querying concrete syntax trees."
homepage = "https://nomicfoundation.github.io/slang/"
repository = "https://github.com/NomicFoundation/slang/"
authors = [
    "Slang Team <slang@nomic.foundation>",
    "Nomic Foundation <packages@nomic.foundation>",
]

readme = "README.md"
license = "MIT"
keywords = ["parser"]
categories = ["compilers", "parsing", "parser-implementations"]

[dependencies]
nom = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
