[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

name = "metaslang_cst"
description = "A generic library for building, navigating and querying concrete syntax trees."
homepage = "https://nomicfoundation.github.io/slang/"
repository = "https://github.com/NomicFoundation/slang/"
authors = [
    "Slang Team <slang@nomic.foundation>",
    "Nomic Foundation <packages@nomic.foundation>",
]

readme = "README.md"
license = "MIT"
keywords = ["parser"]
categories = ["compilers", "parsing", "parser-implementations"]

[features]
syntax = []

[dependencies]
nom = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
