[package]
name = "metaslang_graph_builder"
# version = "0.11.2"
version.workspace = true
# description = "Construct graphs from parsed source code"
# homepage = "https://github.com/tree-sitter/tree-sitter-graph/"
# repository = "https://github.com/tree-sitter/tree-sitter-graph/"
# readme = "README.md"
# license = "MIT OR Apache-2.0"
# authors = ["Douglas Creager <dcreager@dcreager.net>"]
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
# All of our tests are in the tests/it "integration" test executable.
test = false

[[bin]]
name = "metaslang_graph_builder"
required-features = ["cli"]

[features]
cli = [
  "anyhow",
  "clap",
  "env_logger",
  "term-colors",
  "tree-sitter-config",
  "tree-sitter-loader",
]
term-colors = ["colored"]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "3.2", optional = true }
colored = { version = "2", optional = true }
env_logger = { version = "0.9", optional = true }
log = "0.4"
regex = "1.3.2"
serde = "1.0"
serde_json = "1.0"
smallvec = { version = "1.6", features = ["union"] }
string-interner = { version = "0.12", default-features = false, features = [
  "std",
  "inline-more",
  "backends",
] }
thiserror = "1.0.7"
tree-sitter = "0.20.3"
tree-sitter-config = { version = "0.19", optional = true }
tree-sitter-loader = { version = "0.20", optional = true }

[dev-dependencies]
env_logger = "0.9"
indoc = "1.0"
tree-sitter-python = "0.20"
