[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

name = "metaslang_graph_builder"
description = "Construct graphs from parsed source code"
homepage = "https://nomicfoundation.github.io/slang/"
repository = "https://github.com/NomicFoundation/slang/"
authors = [
  "Slang Team <slang@nomic.foundation>",
  "Nomic Foundation <packages@nomic.foundation>",
]

readme = "README.md"
license = "MIT"
keywords = ["parser"]
categories = ["compilers", "parsing", "parser-implementations"]

[dependencies]
log = { workspace = true }
metaslang_cst = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
indoc = { workspace = true }
string-interner = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[lints]
workspace = true
