[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

name = "metaslang_stack_graphs"
description = "Stack graphs utilities used in Slang"
homepage = "https://nomicfoundation.github.io/slang/"
repository = "https://github.com/NomicFoundation/slang/"
authors = [
  "Slang Team <slang@nomic.foundation>",
  "Nomic Foundation <packages@nomic.foundation>",
]

readme = "README.md"
license = "MIT"
keywords = ["stack-graphs"]
categories = ["compilers"]

# __NOMIC_FOUNDATION_FORK__ (disable optional features not used in Slang)
# [features]
# bincode = ["dep:bincode", "lsp-positions/bincode"]
# copious-debugging = []
# serde = ["dep:serde", "serde_with", "lsp-positions/serde"]
# storage = ["bincode", "rusqlite"]
# visualization = ["serde", "serde_json"]

[dependencies]
bitvec = { workspace = true }
controlled-option = { workspace = true }
either = { workspace = true }
enumset = { workspace = true }
fxhash = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
lsp-positions = { workspace = true }
smallvec = { workspace = true, features = ["union"] }
thiserror = { workspace = true }

# __NOMIC_FOUNDATION_FORK__ (disable optional dependencies not used in Slang)
# [dependencies]
# bincode = { version = "2.0.0-rc.3", optional = true }
# rusqlite = { version = "0.28", optional = true, features = ["bundled", "functions"] }
# serde = { version = "1.0", optional = true, features = ["derive"] }
# serde_json = { version = "1.0", optional = true }
# serde_with = { version = "3.1", optional = true }

[lints.rust]
unexpected_cfgs = "allow" # __NOMIC_FOUNDATION_FORK__ (disable warning about non-existing features, disabled above)

[lints.rustdoc]
all = "allow" # __NOMIC_FOUNDATION_FORK__ (disable lints to minimize changes to the fork)

[lints.clippy]
all = "allow" # __NOMIC_FOUNDATION_FORK__ (disable lints to minimize changes to the fork)
