[package]
name = "codegen_ebnf"
version = "0.0.0"
edition = "2021"
rust-version = "1.60.0"

[dependencies]
codegen_utils = { path = "../utils" }
codegen_schema = { path = "../schema" }
Inflector = "0.11.4"
unicode_names2 = "0.5.0"
indexmap = { version = "1.8.1", features = ["serde"] }
itertools = "0.10.3"
jsonschema = "0.16.0"
mset = "0.1.0"
patricia_tree = "0.3.1"
proc-macro2 = "1.0.38"
quote = "1.0.18"
regex = "1.5.6"
semver = { version = "1.0.9", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
