[package]
name = "codegen_schema"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
codegen_utils = { workspace = true }
indexmap = { workspace = true }
jsonschema = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
